SqueletteProjet/tests/pld-test-output/tests-Init-1_fail/gcc-compile.txt
input.c:1:10: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
 int main {
          ^

return code: 1
